# StudyProject

./: .gitignore  README.md  main.cpp
SmartLibrary/: CMakeLists.txt
SmartLibrary/books/: Book.cpp  PrintedBook.h
SmartLibrary/search/: Search.cpp  Search.h
SmartLibrary/users/: User.h
SmartTrainStation/: CMakeLists.txt
SmartTrainStation/Train/: Train.h
books/: Book.h  PrintedBook.cpp
users/: User.cpp
